// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly to snapshot 1`] = `
<div
  className="HelloWorld"
>
  Hello 
</div>
`;

exports[`renders correctly to snapshot 2`] = `
<div
  className="HelloWorld"
>
  Hello 
  world
</div>
`;
